--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KoreSheet</title>
 
-    <link rel ="stylesheet" href="https://Mitarashimochi2.github.io/pom/style.css">
+    <link rel ="stylesheet" href="https://Mitarashimochi2.github.io/KoreSheet/style.css">
 </head>
 <body>
  
